<resources>
    <string name="app_name">Habit Tracer</string>

    <string name="str_afternoon">Afternoon</string>
    <string name="str_morning">Morning</string>
    <string name="str_night">Night</string>
    <string name="str_anytime">Anytime</string>

    <string name="str_sunday">Sunday</string>
    <string name="str_monday">Monday</string>
    <string name="str_tuesday">Tuesday</string>
    <string name="str_wednesday">Wednesday</string>
    <string name="str_thursday">Thursday</string>
    <string name="str_friday">Friday</string>
    <string name="str_saturday">Saturday</string>

    <!--Input Activity-->
    <string name="str_habit_name">Habit name</string>
    <string name="str_habit_tracker">Habit Tracker</string>
    <string name="str_next_to_main_activity">Go to MainActivity</string>
    <string name="str_habit_tracker_icon">Habit Tracker Icon</string>
    <string name="str_doing_now">Doing Now</string>
    <string name="str_login">Login Now</string>

    <!--Guide Activity-->
    <string name="str_content_1">A habit tracker is a simple way to measure whether you did a habit.</string>
    <string name="str_content_2">The most basic format is to get a calendar and cross off each day you stick with your routine. For example, if you meditate on Monday, Wednesday, and Friday, each of those dates gets an X. As time rolls by, the calendar becomes a record of your habit streak.</string>
    <string name="str_content_3">To make this process as easy as possible, I created the Habit, which includes 12 habit tracker templates—one for each month. All you have to do is add your habit and start crossing off the days.</string>
    <string name="str_content_4">Placing an X on each day is the classic look. I prefer something a little more design-oriented, so I shade in the cells on my habit tracker. You could also use checkmarks or fill your habit tracker with dots.</string>
    <string name="str_content_5">No matter what design you choose, the key point is your habit tracker provides immediate evidence that you completed your habit. It’s a signal that you are making progress. Of course, that’s not all it does…</string>
    <string name="str_content_6">Habit tracking is powerful for three reasons.</string>
    <string name="str_content_7">1. It creates a visual cue that can remind you to act.</string>
    <string name="str_content_8">2. It is motivating to see the progress you are making. You don’t want to break your streak.</string>
    <string name="str_content_9">3. It feels satisfying to record your success in the moment.</string>
    <string name="str_content_10">Let’s break down each one.</string>

    <!--Create Habit Activity-->
    <string name="title_name_create_habit_activity">NAME</string>
    <string name="title_day_of_week_create_habit_activity">DAY OF WEEK</string>
    <string name="title_time_of_day_create_habit_activity">TIME OF DAY</string>
    <string name="str_input_habit_name">Habit name</string>
    <string name="str_acronym_sunday">S</string>
    <string name="str_acronym_monday">M</string>
    <string name="str_acronym_tuesday">T</string>
    <string name="str_acronym_wednesday">W</string>
    <string name="str_acronym_thursday">T</string>
    <string name="str_acronym_friday">F</string>
    <string name="str_acronym_saturday">S</string>
    <string name="str_icon">ICON</string>
    <string name="description_anytime">Anytime icon</string>
    <string name="description_morning">Morning icon</string>
    <string name="description_afternoon">Afternoon icon</string>
    <string name="description_night">Night icon</string>
    <string name="description_left_arrow_icon">Back arrow icon</string>
    <string name="description_left_arrow_background">Back arrow background</string>
    <string name="text_create_button">CREATE</string>

    <!--Home Fragment-->
    <string name="title_habit">Habit</string>
    <string name="title_to_do_list">LIST TO DO</string>
    <string name="title_failed">FAILED</string>
    <string name="title_done">DONE</string>

    <!--Setting Fragment-->
    <string name="text_synchronize">Synchronize</string>
    <string name="text_about_us">About Us</string>
    <string name="text_login">Log in</string>
    <string name="text_logout">Log out</string>
    <string name="text_app_info">APP INFO</string>
    <string name="text_guide">Guide</string>
    <string name="title_online_setting">ONLINE SETTING</string>

    <!--Original-->
    <string name="str_right_arrow">Right arrow</string>

    <!--Recycler view habit-->
    <string name="str_colon"> : </string>

    <!--About Us Activity-->
    <string name="str_about_us_content">Contact directly to \n <b>tatchu6878@gmail.com</b> \n to get more information</string>
    <string name="str_back">Back</string>

    <!--Remainder Dialog-->
    <string name="str_remainder_title">Remainder</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_select">Select</string>

    <!--Confirm Dialog-->
    <string name="str_confirm_title">Confirm</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_content_delete_habit">Are you sure to delete it?</string>
    <string name="str_content_logout">Are you sure to log out?</string>

    <!--Synchronize Dialog-->
    <string name="str_synchronize_title">Synchronize</string>
    <string name="str_content_synchronize">Are you sure to synchronize to server ?</string>

    <!--Confirm login dialog-->
    <string name="str_cl_dialog_title">ATTENTION !</string>
    <string name="str_cl_dialog_content_1">If you sure want to login all data are stored in \n local is going to be deleted in order to get all data \n is storing in server.</string>
    <string name="str_cl_dialog_content_2">Please think it through !</string>
    <string name="str_cl_dialog_btn">Still login</string>

    <!--Try connect network dialog-->
    <string name="str_nw_dialog_title">PLEASE !</string>
    <string name="str_nw_content">Try connect to network again !</string>

    <!--Fragment set counter step-->
    <string name="str_fragment_set_counter_step">Your target every day</string>
    <string name="str_fragment_set_counter_step_content">Fill your target kcal value you want to reach every day. \nAfter that your activity is going to be scheduled every day</string>
    <string name="str_kcal_day">Kcal/day</string>
    <string name="str_confirm">Confirm</string>

    <!--Fragment schedule counter step-->
    <string name="str_fragment_schedule_counter_step">Healthy Step Counter</string>
    <string name="str_healthy_record_today">Healthy Record Today</string>
    <string name="str_work">Work</string>
    <string name="str_step">Step</string>
    <string name="str_distance">Distance</string>
    <string name="str_km">km</string>
    <string name="str_steps">steps</string>
    <string name="str_kcal">kcal</string>
    <string name="str_schedule_for_week">Schedule for week</string>
    <string name="str_config">config</string>

    <!---->
    <string name="str_monday_abbreviation">M</string>
    <string name="str_tuesday_abbreviation">T</string>
    <string name="str_wednesday_abbreviation">W</string>
    <string name="str_thursday_abbreviation">T</string>
    <string name="str_friday_abbreviation">F</string>
    <string name="str_saturday_abbreviation">S</string>
    <string name="str_sunday_abbreviation">S</string>

</resources>