<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="a"
            type="com.android.mobile_project.ui.activity.guide.GuideActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/title"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/str_content_10" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_guid_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_create"
            android:onClick="@{(v) -> a.onClick(v)}"
            android:text="@string/str_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>