<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.android.mobile_project.ui.activity.create.CreateHabitViewModel" />

        <variable
            name="a"
            type="com.android.mobile_project.ui.activity.create.CreateHabitActivity" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bck_ground"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bck_habit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/bck_name_title"
                    android:gravity="center"
                    android:text="@string/title_name_create_habit_activity"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_hname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:autofillHints="name"
                    android:background="@drawable/bck_habit_name"
                    android:gravity="center"
                    android:hint="@string/str_input_habit_name"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/bck_ground"
                    android:gravity="center"
                    android:text="@string/str_icon"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/hicon"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/icon_habit"
                    android:visibility="gone"
                    app:shapeAppearanceOverlay="@style/corner"
                    app:strokeColor="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/bck_ground"
                    android:gravity="center"
                    android:text="@string/title_day_of_week_create_habit_activity"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/sun_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_sunday"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/mon_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_monday"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/tue_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_tuesday"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/wed_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_wednesday"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/thu_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_thursday"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/fri_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_friday"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/sat_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bck_cir_date"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:text="@string/str_acronym_saturday"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/bck_ground"
                    android:gravity="center"
                    android:text="@string/title_time_of_day_create_habit_activity"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:baselineAligned="false"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/time_any"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bck_habit_name"
                        android:gravity="center_vertical"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/lg_any"
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:contentDescription="@string/description_anytime" />

                        <TextView
                            android:id="@+id/t_anytime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:layout_marginBottom="@dimen/_1sdp"
                            android:text="@string/str_anytime"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_morning"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bck_habit_name"
                        android:gravity="center_vertical"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/lg_morning"
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:contentDescription="@string/description_morning" />

                        <TextView
                            android:id="@+id/t_morning"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:layout_marginBottom="@dimen/_1sdp"
                            android:text="@string/str_morning"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:baselineAligned="false"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/time_afternoon"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_rowWeight="1"
                        android:layout_weight="1"
                        android:background="@drawable/bck_habit_name"
                        android:gravity="center_vertical"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/lg_afternoon"
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:contentDescription="@string/description_afternoon" />

                        <TextView
                            android:id="@+id/t_afternoon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:text="@string/str_afternoon"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_night"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_rowWeight="1"
                        android:layout_weight="1"
                        android:background="@drawable/bck_habit_name"
                        android:gravity="center_vertical"
                        android:onClick="@{(v) -> a.onClick(v)}"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/lg_night"
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:contentDescription="@string/description_night" />

                        <TextView
                            android:id="@+id/t_night"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_30sdp"
                            android:text="@string/str_night"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:src="@drawable/ic_palm_tree_1"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_create"
                    android:onClick="@{(v) -> a.onClick(v)}"
                    android:text="@string/text_create_button"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:onClick="@{(v) -> a.onClick(v)}"
            android:layout_alignParentBottom="true"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_circle_white_btn"
                android:contentDescription="@string/description_left_arrow_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:contentDescription="@string/description_left_arrow_background"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                app:layout_constraintEnd_toEndOf="@+id/btn_back"
                app:layout_constraintStart_toStartOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="@+id/btn_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>


</layout>