<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialog"
            type="com.android.mobile_project.ui.dialog.ConfirmLoginDialog" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bck_confirm_dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/str_cl_dialog_title"
            android:textColor="@color/title"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_cl_dialog_content_1"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_cl_dialog_content_2"
            android:gravity="center"
            android:paddingVertical="@dimen/_5sdp"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:src="@drawable/ic_about_deciduous_tree"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_still_login"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAllCaps="false"
            android:background="@drawable/btn_create"
            android:text="@string/str_cl_dialog_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>