<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.android.mobile_project.ui.activity.login.LoginViewModel" />

        <variable
            name="a"
            type="com.android.mobile_project.ui.activity.login.LoginActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/ic_activity_input_tree"
                android:contentDescription="@string/str_habit_tracker_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_habit_tracker"
                android:textStyle="bold"
                android:textSize="@dimen/_20ssp" />

            <Button
                android:id="@+id/btn_doing_now"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textAllCaps="false"
                android:text="@string/str_doing_now"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:onClick="@{(v) -> a.onClick(v)}"
                android:background="@drawable/btn_create"/>

            <LinearLayout
                android:id="@+id/btn_gg"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="@{(v) -> a.onClick(v)}"
                android:background="@drawable/btn_login_gg"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo_google"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/str_login"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>